# MLOps

./: .gitignore  .pre-commit-config.yaml  README.md  commands.py  dataset.npz  pyproject.toml
.dvc/: config
Example/: dataset.py  train.py
MLOps/: dataset.py  infer.py  main.py  models.py  train.py
MLOps_pckg/Example/: main.py
configs/: config.yaml
data/: dataset.npz.dvc
logs/: mlflow_runs.dvc
ml_ops/: config.py  data_module.py  dataset.py  infer.py  models.py  serving_utils.py  train.py  triton_client.py
mlops_demo_package/Example/: dataset.py  main.py  model.py  train.py
mlruns/0/: meta.yaml
models/: SimpleNet.onnx.dvc  trained_SimpleNet.pt.dvc
triton/: docker-compose.yaml  model_repository.dvc  отчет.md
triton/model_repository/simple_model/: config.pbtxt
triton/model_repository/simple_model/1/: model.onnx.dvc
