[tool.poetry]
name = "mlops-demo-package"
version = "0.1.0"
description = ""
authors = ["Andrew <andrew.tokarevv@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">3.10, <3.13"
scikit-learn = "^1.3.1"
torch = {version = "^2.0.1+cpu", source = "pytorch"}
torchvision = {version = "^0.15.2+cpu", source = "pytorch"}
matplotlib = "^3.8.0"
pyqt5 = "^5.15.9"


[[tool.poetry.source]]
name = "pytorch"
url = "https://download.pytorch.org/whl/cpu"
priority = "explicit"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
