[tool.poetry]
name = "MLOps"
version = "0.1.0"
description = ""
authors = ["Andrew <andrew.tokarevv@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">3.10, <3.13"
scikit-learn = "^1.3.1"
torch = {version = "^2.0.1+cpu", source = "pytorch"}
torchvision = {version = "^0.15.2+cpu", source = "pytorch"}
matplotlib = "^3.8.0"
pyqt5 = "^5.15.9"


[[tool.poetry.source]]
name = "pytorch"
url = "https://download.pytorch.org/whl/cpu"
priority = "explicit"


[tool.poetry.group.dev.dependencies]
pre-commit = "^3.4.0"

[tool.black]
line-length = 79
target-version = ["py310", "py311", "py312"]
skip-string-normalization = true

[tool.isort]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
line_length = 79
lines_after_imports = 2

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
